[project]
name = "btt-scd"
version = "0.1.0"
description = "Block tensor train decomposition for missing data estimation using stochastic gradient descent"
authors = [
    {name = "Namgil Lee", email = "namgil.lee@kangwon.ac.kr"}
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
flake8 = "^7.2.0"
black = "^25.1.0"
pylint = "^3.3.6"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
ignore = "E203, E501, W503"
max-line-length = 100
exclude = ".git,.gitignore,__pycache__,docs/,old/,build/,dist/"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
skip = [".gitignore", "migrations"]

[tool.pylint.messages_control]
max-line-length = 100
